--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -20,7 +20,7 @@
 ::-webkit-scrollbar-thumb {
   border-radius: 50px;
   width: 10px;
-  background-color: #666666;
+  background-color: rgba(255, 255, 255, 0.192);
 }
 
 html {
